...
      android:layout_height="match_parent"
      android:layout_gravity="center_vertical"
      android:focusable="true"
      android:contentDescription="@string/abc_searchview_description_search"/>

  <LinearLayout
      android:id="@+id/search_edit_frame"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:layout_marginTop="@dimen/search_edit_frame_margin_top"
      android:layout_marginBottom="@dimen/search_edit_frame_margin_bottom"
...
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        style="@style/RtlOverlay.Widget.AppCompat.SearchView.MagIcon"/>

    <!-- Inner layout contains the app icon, button(s) and EditText -->
    <LinearLayout
        android:id="@+id/search_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

      <view
          class="android.support.v7.widget.SearchView$SearchAutoComplete"
          android:id="@+id/search_src_text"
          android:layout_height="@dimen/search_src_text_height"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:minWidth="@dimen/abc_search_view_text_min_width"
          android:layout_gravity="bottom"
          android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
...
